@@ -114,6 +114,7 @@ class phoromatic_settings implements pts_webui_interface
 						'PreSeedTestInstalls' => 'Attempt to pre-install commonly used tests on client systems while idling.',
 						'NetworkPowerUpWhenNeeded' => 'Use network Wake-On-LAN to power on systems when needed.',
 						'LetOtherGroupsViewResults' => 'Let other accounts/groups on this Phoromatic Server view (read-only) this account\'s results.',
+						'LetPublicViewResults' => 'Allow public/unauthenticated visitors to access these test results from the public viewer page.',
 						'PowerOnSystemDaily' => 'Attempt to power-on system dailys (unless there\'s a daily test schedule / trigger on the system) to maintain the DHCP lease on the network, update any software/hardware information, etc. When the daily update is done, the system will power off unless there\'s a test to run and the power-off setting above is enabled. This option is namely useful for systems that otherwise may be idling/powered-off for long periods of time between tests.'
 						)
 					);
