@@ -309,7 +309,7 @@ function phoromatic_webui_right_panel_logged_in($add = null)
 	}
 	else if($_SESSION['AdminLevel'] > 0)
 	{
-		$right .= '<a href="#" onclick="javascript:phoromatic_generate_comparison();"><div id="phoromatic_result_compare_info_box"></div></a> <a href="#" onclick="javascript:phoromatic_delete_results(); return false;"><div id="phoromatic_result_delete_box">Delete Selected Results</div></a>';
+		$right .= '<a href="#" onclick="javascript:phoromatic_generate_comparison(\'?result/\');"><div id="phoromatic_result_compare_info_box"></div></a> <a href="#" onclick="javascript:phoromatic_delete_results(); return false;"><div id="phoromatic_result_delete_box">Delete Selected Results</div></a>';
 		if(($bad_systems = phoromatic_server::systems_appearing_down()) != false)
 		{
 			$right .= '<ul><li><span class="alert">Systems Needing Attention</span></li>';
