@@ -4,6 +4,7 @@ Phoronix Test Suite (Git)
 
 - pts-core: Fix potential crash in list-installed-suites sub-command
 - phoromatic: Workaround for instr() usage in SQLite that caused issues with older distributions
+- phoromatic: Add LetPublicViewResults option and new public results listing page
 
 Phoronix Test Suite 5.8 Milestone 1
 2 April 2015
